--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <script>
         function redirectToNextPage() {
             // Redirect to the next page
-            window.location.href = "https://kenya1.vercel.app/"; 
+            window.location.href = "https://kenya-captured.vercel.app/"; 
         }
     </script>
 </body>
